# MonitoringSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_RUS.md  a.out  main.cc  test.cc
agents/cpu_agent/: setting.conf  setting.json
agents/memory_agent/: setting.conf
agents/network_agent/: setting.conf
components/: Main.qml
docs/: doc.aux  doc.tex  doc.toc  index.html
model/: model.h
model/agent/: agent.cc  agent.h
model/agent_manager/: agent_manager.cc  agent_manager.h
model/agent_settings/: agent_settings.cc  agent_settings.h
model/agents/agent/: agent.cc  agent.h
model/agents/cpu/: CMakeLists.txt  agent.json  cpu_agent.cc  cpu_agent.h  setting.json
model/agents/memory/: CMakeLists.txt  memory_agent.cc  memory_agent.h  setting.json
model/agents/network/: CMakeLists.txt  network_agent.cc  network_agent.h  setting.json
model/agents/system/: CMakeLists.txt  setting.conf  setting.json  system_agent.cc  system_agent.h
model/config_manager/: config_manager.cc
model/cpu_agent/: cpu_agent.h
model/kernel/: kernel.cc  kernel.h
model/manager/agent/: agent_manager.cc  agent_manager.h
model/manager/config/: config_manager.cc  config_manager.h
model/manager/log/: log_manager.cc  log_manager.h
model/manager/notification/: notification_manager.cc  notification_manager.h
model/manager/scaner/: scaner.cc  scaner.h
model/manager/watcher/: watcher_manager.cc  watcher_manager.h
model/memory_agent/: memory_agent.cc
model/network_agent/: network_agent.h
model/notifivation/: notification_manager.h
model/settings/agent/: agent_settings.h
module/: Agents.qml  Logs.qml  Main.qml  Settings.qml
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/forms/: view.ui
src/model/: model.h
styles/: qtquickcontrols2.conf
testF/cpu_agent/: CMakeLists.txt  agent.json  cpu_agent.cc  cpu_agent.h
testF/cpu_agent/agent/: agent.cc  agent.h
testF/lib_cpu_agent/: CMakeLists.txt  lib_cpu_agent.cpp  lib_cpu_agent.h  lib_cpu_agent_global.h
